# avr-vm

./: .dir-locals.el  .gitignore  .travis.yml  Cargo.toml  README.md  README.org  build.sh
src/: cpu.rs  data.rs  decoder.rs  gui.rs  interrupts.rs  io.rs  main.rs  memory.rs  ports.rs  util.rs  widgets.rs
src/widgets/: button.rs  led.rs  mod.rs  poti.rs  seg7.rs
test/adc/: .gitignore  Makefile  adc.c
test/boardtest/: Makefile  boardtest-test.c  boardtest.c
test/button/: .gitignore  Makefile  button.c
test/calc/: .gitignore  Makefile  calc-native.c  calc.c
test/jump/: .gitignore  Makefile  jump-native.c  jump-time.c  jump.c
test/led/: .gitignore  Makefile  led.c
test/libspicboard/: 7seg.h  adc.h  button.h  debug.mk  led.h  timer.h
test/seg7/: .gitignore  Makefile  seg7.c
test/simple/: .gitignore  Makefile  simple-time.c  simple.c
